# agent-skills

./: .gitignore  .markdownlint.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  pyproject.toml  skills-lock.json  test-dod.sh
.claude/agents/: maintainer-agent.md
.claude/skills/audit-docs/: SKILL.md
.claude/skills/audit-docs/scripts/: audit_docs.py
.claude/skills/audit-docs/test/: test_audit_docs.py
.claude/skills/mend-agent-rules/: SKILL.md
.claude/skills/mend-docs/: SKILL.md
.claude/skills/validate-fix/: SKILL.md
.github/workflows/: lint.yml  validate_skills.yml
.nyaphony/: prompt.md  workflow.yaml
dev/: validate_skills.sh
skills/audit-skill/: SKILL.md
skills/audit-skill/evals/: example-evals.yaml
skills/security-review/: README.md  SKILL.md
skills/security-review/evals/: security-review-evals.yaml
skills/security-review/references/: vulnerability-categories.md
skills/security-scan/: README.md  SKILL.md
skills/security-scan/evals/: security-scan-evals.yaml
skills/security-scan/scripts/: run-scans.sh
skills/security-scan/tests/: test_grype_migration.sh
skills/skill-audit/: SKILL.md
skills/skill-audit/scripts/: skill_audit.py
