[project]
name = "agent-skills"
version = "0.1.0"
description = "Personal collection of agent skills."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["skills-ref"]

[tool.uv.sources]
skills-ref = { git = "https://github.com/agentskills/agentskills.git", subdirectory = "skills-ref" }
